Adds OpenAI Codex TOML config support to install_mcpr
Extends unified MCP server installation to handle OpenAI Codex,
including custom TOML parsing and writing helpers to preserve
comments and structure in config files.

Updates documentation and tests to reflect support for Codex,
enabling cross-agent configuration through a common interface.

Improves flexibility for future agent additions and config formats.

--- a/README.Rmd
+++ b/README.Rmd
@@ -72,7 +72,7 @@ A convenience function, `install_mcpr()`, is provided to handle package installa
 
 ```r
 library(MCPR)
-install_mcpr(agent = "claude") # Supported agents: 'claude', 'gemini', 'copilot'
+install_mcpr(agent = "claude") # Supported agents: 'claude', 'gemini', 'copilot', 'codex'
 ```
 ### Manual MCP Configuration
 
