--- a/README.Rmd
+++ b/README.Rmd
@@ -68,7 +68,7 @@ remotes::install_github("phisanti/MCPR")
 Next, you should install the MCP server to give the agent access to the tools included in the package. System integration is designed to be straightforward, with both automated and manual pathways.
 
 ### Automated Setup
-A convenience function, `install_mcpr()`, is provided to handle package installation and agent-specific MCP configuration.
+A convenience function, `install_mcpr()`, is provided to handle package installation and agent-specific MCP configuration. Supported agents include Claude, Gemini, Copilot, and Codex.
 
 ```r
 library(MCPR)
@@ -93,6 +93,16 @@ Then, add the following MCP server configuration:
   }
 }
 ```
+
+### Supported agents
+Currently, MCPR supports configuration for the following AI agents with the given configuration paths (note that these are approximate and might vary based on OS and installation):
+
+- **Claude:** Claude Desktop config at `~/Library/Application Support/Claude/claude_desktop_config.json` (macOS), `%APPDATA%/Claude/claude_desktop_config.json` (Windows), or `~/.config/Claude/claude_desktop_config.json` (Linux). 
+- **Gemini:** Global settings at `~/.gemini/settings.json` (use `./.gemini/settings.json` for a project-local setup). 
+- **Copilot:** Workspace configuration at `.vscode/mcp.json` (user-level fallback at `~/.config/Code/User/mcp.json` or `%APPDATA%/Code/User/mcp.json`). 
+- **Codex:** Global TOML configuration at `~/.codex/config.toml`. 
+
+
 ## Usage Pattern
 The intended workflow is simple and user-centric.
 
