feat: add inspect_object tool and extend view targets - implement inspect_object MCP tool with auto-detection for 12 R object   types (data frames, vectors, factors, functions, lists, matrices,   S3/S4/R6, formulas, date/time, environments) - extend view tool with last_value and help (parsed Rd docs) targets - add 182 new tests, 1523 total passing with 0 failures

--- a/README.Rmd
+++ b/README.Rmd
@@ -52,7 +52,7 @@ mcpr_session_start()
 MCPR's design is guided by principles of modularity, robustness, and practicality.
 
 - **Communication Protocol:** MCPR uses JSON-RPC 2.0 over `nanonext` sockets, providing a lightweight, asynchronous, and reliable messaging layer. This choice ensures cross-platform compatibility and non-blocking communication suitable for an interactive environment.
-- **Tool-Based Design:** Functionality is exposed to the AI agent as a discrete set of tools (create_plot, execute_r_code, etc.). This modular approach simplifies the agent's interaction logic and provides clear, well-defined endpoints for R operations.
+- **Tool-Based Design:** Functionality is exposed to the AI agent as a discrete set of tools (show_plot, execute_r_code, etc.). This modular approach simplifies the agent's interaction logic and provides clear, well-defined endpoints for R operations.
 - **Session Management:** A central `mcpr_session_start()` function acts as a listener, making an R session discoverable on the local machine. The `manage_r_sessions` tool provides the service discovery mechanism for agents to find and connect to these listeners.
 - **Graphics Subsystem:** Plot generation leverages `httpgd` when available for high-performance, off-screen rendering. A fallback to standard R graphics devices (grDevices) ensures broad compatibility. The system includes intelligent token management to prevent oversized image payloads.
 
@@ -109,10 +109,10 @@ The intended workflow is simple and user-centric.
 1. The user starts an R session and invokes `mcpr_session_start()` to enable connections.
 2. The user instructs their AI agent to connect.
 3. The agent uses `manage_r_sessions('list')` to find the session ID and `manage_r_sessions('join', session=ID)` to connect.
-4. The user can now interact with the agent, making requests regarding their R session. The agent can now use `execute_r_code`, `create_plot`, and `view` to collaboratively assist the user with their analysis, maintaining full context throughout the interaction.
+4. The user can now interact with the agent, making requests regarding their R session. The agent can now use `execute_r_code`, `show_plot`, and `view` to collaboratively assist the user with their analysis, maintaining full context throughout the interaction.
 
 ## Agent tools
-The philosophy in the development of the MCPR package is to provide the agent with few, well-defined tools that can be composed to perform complex tasks. The goal was to give the agent the ability to manage multiple R sessions (`manage_r_sessions`), to run R code in the session (`execute_r_code`), see the graphical data (`create_plot`), and inspect the session (`view`). We believe these are flexible enough to accomplish any task in R. See the details below.
+The philosophy in the development of the MCPR package is to provide the agent with few, well-defined tools that can be composed to perform complex tasks. The goal was to give the agent the ability to manage multiple R sessions (`manage_r_sessions`), to run R code in the session (`execute_r_code`), see the graphical data (`show_plot`), and inspect the session (`view`). We believe these are flexible enough to accomplish any task in R. See the details below.
 
 ### `execute_r_code(code)`
 **Purpose**: Execute arbitrary R code within session context  
@@ -129,18 +129,24 @@ execute_r_code("
 ")
 ```
 
-### `create_plot(expr, width, height, format)`
-**Purpose**: Generate visualizations with AI-optimized output  
-**Input**: R plotting expression, dimensions, format specification  
-**Output**: Base64-encoded image with metadata and token usage information
+### `show_plot(expr, target, width, height, format)`
+**Purpose**: Create and display R plots with target-based routing  
+**Input**: R plotting expression, target ('user' or 'agent'), dimensions and format (agent only)  
+**Output**: For target='user' (default): displays the plot to the user via the active graphics device. For target='agent': returns a base64-encoded image with metadata and token usage information.
 
 ```r
-create_plot("
+# Show a plot to the user (default)
+show_plot("
   library(ggplot2)
   ggplot(mtcars, aes(wt, mpg)) + 
     geom_point() + 
     geom_smooth(method = 'lm')
-", width = 600, height = 450)
+")
+
+# Render a plot for agent analysis
+show_plot("
+  ggplot(mtcars, aes(wt, mpg)) + geom_point()
+", target = "agent", width = 600, height = 450)
 ```
 
 ### `manage_r_sessions(action, session)`
